--- a/package.json
+++ b/package.json
@@ -5,11 +5,19 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "eslint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "eslintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
+    "stylelint": "stylelint \"**/*.(scss|vue)\"",
+    "stylelintfix": "stylelint \"**/*.(scss|vue)\" --fix"
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "save": "^2.4.0",
+    "stylelint-webpack-plugin": "^2.1.1",
+    "vue": "^2.6.11",
+    "vue-axios": "^3.1.3",
+    "vue-loader": "^15.7.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
@@ -18,11 +26,17 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "prettier": "^1.19.1",
-    "sass-loader": "^8.0.2",
+    "sass-loader": "^7.3.1",
+    "style-resources-loader": "^1.2.1",
+    "stylelint": "^10.1.0",
+    "stylelint-config-standard": "^18.3.0",
+    "stylelint-scss": "^3.14.2",
+    "stylelint-webpack-plugin": "^0.10.5",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
