--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "stylelint-webpack-plugin": "^2.1.1",
     "vue": "^2.6.11",
     "vue-axios": "^3.1.3",
-    "vue-loader": "^15.7.0"
+    "vue-loader": "^15.7.0",
+    "vue-router": "^3.4.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
