--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "stylelintfix": "stylelint \"**/*.(scss|vue)\" --fix"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "router": "^1.3.5",
     "save": "^2.4.0",
     "stylelint-webpack-plugin": "^2.1.1",
     "vue": "^2.6.11",
@@ -54,6 +56,11 @@
       "parser": "babel-eslint"
     },
     "rules": {}
+  },
+  "postcss": {
+    "plugins": {
+      "autoprefixer": {}
+    }
   },
   "browserslist": [
     "> 1%",
