--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "router": "^1.3.5",
     "save": "^2.4.0",
     "stylelint-webpack-plugin": "^2.1.1",
+    "swiper": "^6.3.5",
     "vue": "^2.6.11",
     "vue-axios": "^3.1.3",
     "vue-loader": "^15.7.0",
-    "vue-router": "^3.4.8"
+    "vue-router": "^3.4.8",
+    "vue-slider-component": "^3.2.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
